# aa_experiments

./: .gitignore  call_models.py  experiment_config.py  prepare_pca.py  pyproject.toml  setup.py
assistant_axis/: pca.py
outputs/alpaca-7b/: axis.pt  default_vector.pt
outputs/alpaca-7b/vectors/: aberration.pt  absurdist.pt  accountant.pt  activist.pt  actor.pt  addict.pt  adolescent.pt  advocate.pt  alien.pt  altruist.pt  amateur.pt  ambassador.pt  amnesiac.pt  analyst.pt  anarchist.pt  ancient.pt  angel.pt  anthropologist.pt  archaeologist.pt  architect.pt  archivist.pt  artisan.pt  ascetic.pt  assistant.pt  auctioneer.pt  auditor.pt  avatar.pt  bard.pt  bartender.pt  biologist.pt  blogger.pt  bohemian.pt  builder.pt  caregiver.pt  cartographer.pt  caveman.pt  celebrity.pt  chameleon.pt  chef.pt  chemist.pt  (+235 more)
outputs/llama-7b/: axis.pt
outputs/llama-7b/vectors/: aberration.pt  absurdist.pt  accountant.pt  activist.pt  actor.pt  addict.pt  adolescent.pt  advocate.pt  alien.pt  altruist.pt  amateur.pt  ambassador.pt  amnesiac.pt  analyst.pt  anarchist.pt  ancient.pt  angel.pt  anthropologist.pt  archaeologist.pt  architect.pt  archivist.pt  artisan.pt  ascetic.pt  assistant.pt  auctioneer.pt  auditor.pt  (+232 more)
setup_data/: alpaca-7b-reproduced_layer_norms.pt  alpaca-7b-reproduced_pca.pt  llama-2-7b-chat-hf_layer_norms.pt  llama-2-7b-chat-hf_pca.pt  llama-2-7b-hf_layer_norms.pt  llama-2-7b-hf_pca.pt  llama-7b_layer_norms.pt  llama-7b_pca.pt  meta-llama-3-8b-instruct_layer_norms.pt  meta-llama-3-8b-instruct_pca.pt  meta-llama-3-8b_layer_norms.pt  meta-llama-3-8b_pca.pt
(+1104 files in other folders)
